--- a/frontend/market-mind-ui/src/app/components/nav-bar/nav-bar.component.html
+++ b/frontend/market-mind-ui/src/app/components/nav-bar/nav-bar.component.html
@@ -1,1 +1,34 @@
-<p>nav-bar works!</p>
+<div class="d-flex flex-column" id="sidebar">
+    <!-- Sidebar content -->
+    <div class="flex-grow-1">
+      <ul class="nav flex-column">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">
+            <i class="bi bi-house-door"></i><span class="ms-2">Home</span>
+          </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" href="#">
+              <i class="bi bi-binoculars"></i><span class="ms-2">Watchlist</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="#">
+              <i class="bi bi-suitcase-lg"></i><span class="ms-2">Portfolio</span>
+            </a>
+          </li>
+        <!-- ... other items ... -->
+      </ul>
+    </div>
+  
+    <!-- Sidebar footer for account -->
+    <div class="mt-auto">
+      <ul class="nav flex-column">
+        <li class="nav-item">
+          <a class="nav-link" href="#">
+            <i class="bi bi-person"></i><span class="ms-2">Account</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
