--- a/frontend/market-mind-ui/src/app/components/nav-bar/nav-bar.component.html
+++ b/frontend/market-mind-ui/src/app/components/nav-bar/nav-bar.component.html
@@ -3,12 +3,12 @@
     <div class="flex-grow-1">
       <ul class="nav flex-column">
         <li class="nav-item">
-          <a class="nav-link active" href="#">
+          <a class="nav-link active" href="#" [routerLink]="['/home']">
             <i class="bi bi-house-door"></i><span class="ms-2">Home</span>
           </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" href="#">
+            <a class="nav-link active" href="#" [routerLink]="['/watchlist']">
               <i class="bi bi-binoculars"></i><span class="ms-2">Watchlist</span>
             </a>
           </li>
